src/parser/snapshots/camello__parser__tests__errors__catch_empty_param.snap
---
source: src/parser/mod.rs
assertion_line: 531
expression: render_errors(&errors)
---
  × Parse error: Expected expression in catch parameter
   ╭─[3:10]
 2 │     do_something();
 3 │ } catch () {
   ·          ┬
   ·          ╰── here
 4 │     handle();
   ╰────
