src/parser/snapshots/camello__parser__tests__errors__cut_without_pod.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Found =cut without a preceding POD command
   ╭────
 1 │ =cut
   · ──┬──
   ·   ╰── here
   ╰────
  × Parse error: Unexpected end of input
   ╭────
 1 │ =cut
   ╰────
