src/parser/snapshots/camello__parser__tests__errors__direct_hash_after_paren.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Direct hash subscription requires '->' operator (e.g., func()->{key})
   ╭────
 1 │ (H){k};
   ·    ┬
   ·    ╰── here
   ╰────
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ (H){k};
   ·     ┬
   ·     ╰── here
   ╰────
  × Parse error: Expected a statement, but found an unexpected token.
   ╭────
 1 │ (H){k};
   ·      ┬
   ·      ╰── here
   ╰────
