src/parser/snapshots/camello__parser__tests__errors__direct_subscription_after_call.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Direct hash subscription requires '->' operator (e.g., func()->{key})
   ╭─[1:4]
 1 │ f(){k};
   ·    ┬
   ·    ╰── here
 2 │ f()[0];
   ╰────
  × Parse error: Expected ';' after expression statement
   ╭─[1:5]
 1 │ f(){k};
   ·     ┬
   ·     ╰── here
 2 │ f()[0];
   ╰────
  × Parse error: Expected a statement, but found an unexpected token.
   ╭─[1:6]
 1 │ f(){k};
   ·      ┬
   ·      ╰── here
 2 │ f()[0];
   ╰────
  × Parse error: Direct array subscription requires '->' operator (e.g., func()->[0])
   ╭─[2:4]
 1 │ f(){k};
 2 │ f()[0];
   ·    ┬
   ·    ╰── here
   ╰────
  × Parse error: Expected ';' after expression statement
   ╭─[2:5]
 1 │ f(){k};
 2 │ f()[0];
   ·     ┬
   ·     ╰── here
   ╰────
  × Parse error: Expected a statement, but found an unexpected token.
   ╭─[2:6]
 1 │ f(){k};
 2 │ f()[0];
   ·      ┬
   ·      ╰── here
   ╰────
