src/parser/snapshots/camello__parser__tests__errors__invalid_tokens.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Expected expression after variable declaration keyword
   ╭────
 1 │ my = @ % ^ invalid tokens here;
   ·    ┬
   ·    ╰── here
   ╰────
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ my = @ % ^ invalid tokens here;
   ·      ┬
   ·      ╰── here
   ╰────
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ my = @ % ^ invalid tokens here;
   ·            ───┬───
   ·               ╰── here
   ╰────
