src/parser/snapshots/camello__parser__tests__errors__operator_without_rhs.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Expected expression after binary operator
   ╭─[1:8]
 1 │ $foo + ;
   ·        ┬
   ·        ╰── here
 2 │ my $x = 1 + ;
   ╰────
  × Parse error: Expected expression after binary operator
   ╭─[2:13]
 1 │ $foo + ;
 2 │ my $x = 1 + ;
   ·             ┬
   ·             ╰── here
 3 │ $a = $b * ;
   ╰────
  × Parse error: Expected expression after binary operator
   ╭─[3:11]
 2 │ my $x = 1 + ;
 3 │ $a = $b * ;
   ·           ┬
   ·           ╰── here
   ╰────
