src/parser/snapshots/camello__parser__tests__errors__quote_like_unbalanced.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Expected DELIMITER, found Some(IDENT)
   ╭────
 1 │ my $str = q{unterminated;
   ·             ──────┬─────
   ·                   ╰── here
   ╰────
