src/parser/snapshots/camello__parser__tests__errors__try_without_handler.snap
---
source: src/parser/mod.rs
assertion_line: 531
expression: render_errors(&errors)
---
  × Parse error: Expected 'catch' or 'finally' after 'try' block
   ╭────
 3 │ }
   ╰────
