src/parser/snapshots/camello__parser__tests__errors__unterminated_block.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Expected R_BRACE, found None
   ╭────
 2 │     my $x = 1;
   ╰────
