src/parser/snapshots/camello__parser__tests__errors__use_missing_semicolon.snap
---
source: src/parser/mod.rs
expression: render_errors(&errors)
---
  × Parse error: Expected ';' after use/no statement
   ╭────
 1 │ use A use X;
   ·       ─┬─
   ·        ╰── here
   ╰────
